--- a/src03_text_to_resume/job_02271654_michigan_ASIC_Firmware_Engineer_OmniVision.tex
+++ b/src03_text_to_resume/job_02271654_michigan_ASIC_Firmware_Engineer_OmniVision.tex
@@ -81,5 +81,26 @@
 \par Meeting ID: 984 9202 4524
 \par Passcode: 854990
 
+\break
+
+\FFrk \baselineskip = 24pt
+\parskip 1 em
+
+\par Hi, Jacky Wang,
+\par When ou asked me that how about my experences on USB, 
+I didn't understand at that time. 
+\par Do you means you need somebody to port the openRISC system to work at the USB device mode ?
+I have no experence on the software to operate the CMOS sensor,
+but only a small CPLD to modify the CMOS sensor signals experence .
+And I have a little experence on usb USB On-The-Go debuging .
+To the USB camer, it should work at the USB device mode only.
+\par The 32 bit openRISC may not be powerful enough to encode in h264/h265.
+So a hard IP core of h264/h265 may be needed to be put into the SOC inside.
+
+\vskip 8em
+Yanuo Deng, March 7, 2021
+
+
+
 
 \bye
