--- a/bible01/bible__NIV_1_peter.tex
+++ b/bible01/bible__NIV_1_peter.tex
@@ -1,4 +1,7 @@
 \input ../header/example_tex01.tex
+\FFrh \baselineskip = 14pt
+\parskip 0.3 em
+
 
 \centerline{  \FFbg
 1 Peter 1 - New International Version }
