--- a/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
@@ -40,14 +40,14 @@ Integrated Circuit Designer, Dec 2017 - Feb 2019
 }
 
 { \parindent = 1 em \item{*}
- Verilog coding, FPGA simulation and debug for self-powered SOC chip.
+ Verilog coding, FPGA simulation and debug for self-powered MCU SOC chip on iPhone data cables.
 }
 
 { \parindent = 1 em \item{*}
- MCU debug; Port C-language from Assembly for the MCU; Mixed (Analog) circuit design
+ MCU debug; Port C from Assembly for the 13-bits MCU (PIC); Mixed (Analog) circuit design
 }
 { \parindent = 1 em \item{*}
- Achieved self-powered MCU SOC used on iPhone data cables; Mass production 10k/M
+ Xilinx autobuild \& remote download firmware platform for remote team work.
 }
 
 { \medbreak } { \FFbg
