--- a/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
@@ -59,10 +59,10 @@ Software (Firmware) Engineer, May 2017 - Oct 2017
 }
 
 { \parindent = 1 em \item{*}
- Linux driver for the Wi-Fi chip; Speech Recognition App for Linux
- }
-{ \parindent = 1 em \item{*}
- Achieved smart wireless Speech Recognition module ; Mass production 3k/M
+ Linux driver for the Wi-Fi chip; Speech Recognition 
+ \&
+ synthesis
+ App for Linux
  }
 
 { \medbreak } { \FFbg
@@ -73,10 +73,10 @@ BLUEWAY CO.LTD., Huizhou, China, 5 people R\&D/2500
 Software (Firmware) Engineer, May 2016 - Apr 2017
 }
 { \parindent = 1 em \item{*}
- FreeRTOS system migration to STM32 for the embedded board, target for electric mowers.
+ FreeRTOS port to STM32 for for electric mowers.
 }
 { \parindent = 1 em \item{*}
-Using Mathematica to optimize the walking path of the mowers, to add some AI.
+Mathematica to optimize the walking path of the mowers (AI path planning).
 }
 
 { \medbreak } { \FFbg
