--- a/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
@@ -32,7 +32,7 @@ EXPERIENCE
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 
 { \medbreak } { \FFbg
-C-MATRIXTECH CO.LTD., Zhuhai, China, 3 people R\&D/6
+C-MATRIXTECH CO.LTD., Zhuhai, China, 7 people design house
 }
 
 { \FFte
@@ -40,7 +40,7 @@ Integrated Circuit Designer, Dec 2017 - Feb 2019
 }
 
 { \parindent = 1 em \item{*}
- Verilog coding, FPGA simulation and debug for self-powered MCU SOC chip on iPhone data cables.
+ Verilog + FPGA for self-powered MCU SOC chips for iPhone Lightning cables.
 }
 
 { \parindent = 1 em \item{*}
@@ -51,7 +51,7 @@ Integrated Circuit Designer, Dec 2017 - Feb 2019
 }
 
 { \medbreak } { \FFbg
-VIOMI CO.LTD., Foshan, China, 3 people R\&D/200
+VIOMI CO.LTD., Foshan, China, 3 people R\&D
 }
 
 { \FFte
@@ -59,39 +59,42 @@ Software (Firmware) Engineer, May 2017 - Oct 2017
 }
 
 { \parindent = 1 em \item{*}
- Linux driver for the Wi-Fi chip; Speech Recognition 
- \&
- synthesis
- App for Linux
+ Linux driver for the WiFi chip; Speech Recognition \& synthesis App for Linux
+ }
+{ \parindent = 1 em \item{*}
+ UART, GPIO, SPI, NAND flash, TCP/UDP/IP.
  }
 
 { \medbreak } { \FFbg
-BLUEWAY CO.LTD., Huizhou, China, 5 people R\&D/2500
+BLUEWAY CO.LTD., Huizhou, China, 5 people R\&D
 }
 
 { \FFte
 Software (Firmware) Engineer, May 2016 - Apr 2017
 }
 { \parindent = 1 em \item{*}
- FreeRTOS port to STM32 for for electric mowers.
+ FreeRTOS port to STM32 for for electric mowers. Altera for SPI/I2C.
 }
 { \parindent = 1 em \item{*}
 Mathematica to optimize the walking path of the mowers (AI path planning).
 }
 
 { \medbreak } { \FFbg
-ADON CO.LTD., Foshan, China, 3 people R\&D/350
+ADON CO.LTD., Foshan, China, 3 people R\&D
 }
 
 { \FFte
 Software (Firmware) Engineer, Oct 2013 - Dec 2015
 }
 { \parindent = 1 em \item{*}
- Linux driver \& app for the Homepod (Wi-Fi speaker/charger for iPhone); Mass production, 3k/M
+ Linux driver \& app for the Homepod (WiFi speaker/charger for iPhone). 
+}
+{ \parindent = 1 em \item{*}
+ Qualcomm AR9331 : WiFi + I2S + UART + SPI + GPIO + USB OTG + OpenWRT + Buildroot.
  }
 
 { \medbreak } { \FFbg
-SKYIT SOFTWARE CO.LTD., Shunde, China, 5 people R\&D/500
+SKYIT SOFTWARE CO.LTD., Shunde, China, 5 people R\&D
 }
 
 { \FFte
@@ -102,7 +105,7 @@ Software Engineer, Dec 2011 - Jul 2013
  }
 
 { \medbreak } { \FFbg
-VBRIDGE MICROSYSTEM INC, San Jose, CA, 5 people R\&D/12
+VBRIDGE MICROSYSTEM INC, San Jose, CA, 5 people design house
 }
 
 { \FFte
