--- a/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
@@ -90,7 +90,7 @@ Software (Firmware) Engineer, Oct 2013 - Dec 2015
  Linux driver \& app for the Homepod (WiFi speaker/charger for iPhone). 
 }
 { \parindent = 1 em \item{*}
- Qualcomm AR9331 : WiFi + I2S + UART + SPI + GPIO + USB OTG + OpenWRT + Buildroot.
+ Qualcomm AR9331 : WiFi + I2S + UART + SPI + GPIO + USB OnTheGo + OpenWRT + Buildroot.
  }
 
 { \medbreak } { \FFbg
@@ -101,7 +101,7 @@ SKYIT SOFTWARE CO.LTD., Shunde, China, 5 people R\&D
 Software Engineer, Dec 2011 - Jul 2013
 }
 { \parindent = 1 em \item{*}
- Windows Client App by C\#; Data API by C for the first order a meal Android App in China
+ Windows Client App by C\#; MySQL API by C to the first order a meal Android App in China
  }
 
 { \medbreak } { \FFbg
@@ -120,7 +120,7 @@ Digital Integrated Circuit Engineer, Apr 2005 - May 2008
 All IP cores tapout in a dual-MIPS SOC Chip.
  }
 { \parindent = 1 em \item{*}
-Linux + VxWorks board support package(BSP) was built for the dual-MIPS.
+Linux + VxWorks board support package(BSP): UART + I2C + SPI + SDIO.
  }
 
 { \medbreak } { \FFbg
@@ -138,10 +138,10 @@ ADDITIONAL SKILLS
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
 { \parindent = 1 em \item{*}
- C, Verilog, Vim, Bash, Perl, Go-language, Gnumake, git
+ C, Verilog, Vim, Bash, Awk, Sed, Perl, Golang, Gnumake, Git.
  }
 { \parindent = 1 em \item{*}
- Linux / FreeRTOS driver
+ Linux / FreeRTOS driver; UART, SPI, I2C, I2S, USB OnTheGo, WiFi Hostapd
  }
 
 { \medbreak } { \FFbg
