--- a/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
@@ -130,7 +130,11 @@ EDUCATION
 XI'AN university of technology, Xi'an city, Shannxi, China
 
 { \FFte
-Master of Science (M.S.) Microelectronics \& Solid State Electronics (Apr 2005)
+Master degree : Microelectronics \& Solid State Electronics (Apr 2005).
+}
+
+{ \FFte
+Bachelor degree : Microelectronics Technology (July 2002).
 }
 
 { \medbreak } { \FFbg
