--- a/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
@@ -90,7 +90,7 @@ Software (Firmware) Engineer, Oct 2013 - Dec 2015
  Linux driver \& app for the Homepod (WiFi speaker/charger for iPhone). 
 }
 { \parindent = 1 em \item{*}
- Qualcomm AR9331 : WiFi + I2S + UART + SPI + GPIO + USB OnTheGo + OpenWRT + Buildroot.
+ Qualcomm AR9331 : WiFi, I2S, UART, SPI, GPIO, USB OnTheGo, OpenWRT, Buildroot.
  }
 
 { \medbreak } { \FFbg
@@ -112,7 +112,7 @@ VBRIDGE MICROSYSTEM INC, San Jose, CA, 5 people design house
 Digital Integrated Circuit Engineer, Apr 2005 - May 2008
 }
 { \parindent = 1 em \item{*}
- IP cores of security engineer :
+ IP cores of security engineer (TLS) :
  AES, DES, 3DES, MD5, SHA1, CRC ;
  5-bits MCU core.
  }
@@ -120,7 +120,7 @@ Digital Integrated Circuit Engineer, Apr 2005 - May 2008
 All IP cores tapout in a dual-MIPS SOC Chip.
  }
 { \parindent = 1 em \item{*}
-Linux + VxWorks board support package(BSP): UART + I2C + SPI + SDIO.
+Linux/VxWorks board support package(BSP): UART, I2C, SPI, SDIO.
  }
 
 { \medbreak } { \FFbg
