--- a/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
@@ -44,7 +44,7 @@ Integrated Circuit Designer, Dec 2017 - Feb 2019
 }
 
 { \parindent = 1 em \item{*}
- MCU debug; Port C from Assembly for the 13-bits MCU (PIC); Mixed (Analog) circuit design
+ MCU debug; Port C from Assembly for the 13-bits MCU (PIC); Mixed (Analog) circuit design.
 }
 { \parindent = 1 em \item{*}
  Xilinx autobuild \& remote download firmware platform for remote team work.
@@ -59,7 +59,7 @@ Software (Firmware) Engineer, May 2017 - Oct 2017
 }
 
 { \parindent = 1 em \item{*}
- Linux driver for the WiFi chip; Speech Recognition \& synthesis App for Linux
+ Linux driver for the WiFi chip; Speech Recognition \& synthesis App for Linux.
  }
 { \parindent = 1 em \item{*}
  UART, GPIO, SPI, NAND flash, TCP/UDP/IP.
@@ -101,7 +101,7 @@ SKYIT SOFTWARE CO.LTD., Shunde, China, 5 people R\&D
 Software Engineer, Dec 2011 - Jul 2013
 }
 { \parindent = 1 em \item{*}
- Windows Client App by C\#; MySQL API by C to the first order a meal Android App in China
+ Windows Client App by C\#; MySQL API by C to the first order a meal Android App in China.
  }
 
 { \medbreak } { \FFbg
@@ -145,7 +145,7 @@ ADDITIONAL SKILLS
  C, Verilog, Vim, Bash, Awk, Sed, Perl, Golang, Gnumake, Git.
  }
 { \parindent = 1 em \item{*}
- Linux / FreeRTOS driver; UART, SPI, I2C, I2S, USB OnTheGo, WiFi Hostapd
+ Linux / FreeRTOS driver; UART, SPI, I2C, I2S, USB OnTheGo, WiFi hostapd/wpa\_supplicant.
  }
 
 { \medbreak } { \FFbg
