--- a/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
+++ b/src03_text_to_resume/rs_0311_0816am_2021_dengyanuo_resume.tex
@@ -152,7 +152,7 @@ ADDITIONAL SKILLS
 Certifications
 }
 { \smallbreak } {\par\noindent\hrule} { \smallbreak }
-Electronics Engineer Certification, Foshan , China , Aug 2008
+Electronics Engineer Certification, Foshan , China , Aug 2008.
 
 { \medbreak } { \FFbg
 Personal Characteristics
