--- a/header/example_tex01.tex
+++ b/header/example_tex01.tex
@@ -2,6 +2,12 @@
 
 % #$%&\^_{}~
 
+% 0.4 padding
+\hsize 7.7 in     % 8.5  - 0.4 * 2
+\vsize 10.7 in    % 11.5 - 0.4 * 2
+\voffset -0.6 in  % 1 - 0.4
+\hoffset -0.6 in  % 1 - 0.4
+
 % 0.7 padding
 \hsize 7.1 in     % 8.5  - 0.7 * 2
 \vsize 10.1 in    % 11.5 - 0.7 * 2
