--- a/bible01/bible__NIV_hebrews_11.tex
+++ b/bible01/bible__NIV_hebrews_11.tex
@@ -1,16 +1,9 @@
 \input ../header/example_tex01.tex
-
-% 0.4 padding
-\hsize 7.7 in     % 8.5  - 0.4 * 2
-\vsize 10.7 in    % 11.5 - 0.4 * 2
-\voffset -0.6 in  % 1 - 0.4
-\hoffset -0.6 in  % 1 - 0.4
-
-\FFrf \baselineskip = 9pt
+\FFrh \baselineskip = 13pt
 \parskip 0.3 em
 
 
-\centerline{  \FFbf
+\centerline{  \FFbg
 Hebrews 11 - New International Version }
 
 \par
