--- a/src03_text_to_resume/job_03241139_scaleflux_2021_san_jose.tex
+++ b/src03_text_to_resume/job_03241139_scaleflux_2021_san_jose.tex
@@ -86,4 +86,27 @@ San Jose, CA 95112
 \par Experience in computer storage and networking is desired
 \par Should be a team player with excellent communication skills and the desire to take on diverse challenges
 
+\break
+
+\FFrj \baselineskip = 20pt
+\FFri \baselineskip = 19pt
+\par This is Fei Sun from ScaleFlux, we received your resume from LinkedIn. You applied for ASIC design position, but I think you have good experience in firmware, I am wondering if you are interested in the  validation position? Here is the job post, please let me know if you are interested.
+\par We are looking for HW/ASIC design validation engineers to join our rapidly growing engineering team focused on breakthrough cloud and data center infrastructure solutions involving both storage and computing.
+\par Location: San Jose, California
+\par The ideal candidate for this role shares our passion for creating innovative technologies, and thrives in a highly dynamic, fast-paced, results-driven environment. We are looking for highly talented, passionate, and versatile engineers that can create next generation enterprise data center solutions.
+\par Responsibilities
+\par * Work closely with the design team to review and understand specifications / architectures / micro-architectures
+\par * Work closely with software team to define API and develop driver code
+\par * Develop and execute test cases to validate new hardware features at module level and system level
+\par * Build infrastructure for functional and performance validation, NAND characterization and manufacturing test
+\par * Define test plans to cover ASIC design / drivers / NAND features.
+\par * Run regression and debug / triage failures in validation environment and reproduce issues in simulation environment.
+\par Requirements
+\par * BSEE with 3+ years or MSEE with 1+ years experiences
+\par * Good knowledge of standard ASIC/FPGA design/verification/post silicon validation flows
+\par * Experience with C/C++ and Python scripts
+\par * Knowledge of industry high speed interface standard protocols (PCI Express, DDR, NAND Flash etc.) strongly desired
+\par * Experience in computer storage and networking is desired
+\par * Team player with excellent communication skills and the desire to take on diverse challenges
+
 \bye
