--- a/header/example_tex01.tex
+++ b/header/example_tex01.tex
@@ -106,3 +106,6 @@
 % \FFrm \baselineskip = 26pt
 
 % \parskip 1.5 em
+
+% \special{html:<a href="file:foo.pdf\string#label">}klick here\special{html:</a>}
+% \special{html:<a href="https://www.chinadsf.org">}www.chinadsf.org\special{html:</a>}
